# @markup rdoc
# @title Change Log
# @author Robert Sharp

== History

[jeckyl-0.3.8 24-Jun-2014]

  Added compound names to klass action for 'jeckyl' command, used to generate class
  files

[jeckyl-0.3.7 19-Sep-2013]

  Corrected some minor yard issues
  
[jeckyl-0.3.6 11-Sep-2013]

  Added a couple of helpers (an_executable) and removed thor from utility.

[jeckyl-0.3.5 23-Aug-2013]

  Ensure 1.9 compliance

[jeckyl-0.3.4 23-Aug-2013]

  Test for files in merge and ignore if not there

[jeckyl-0.3.3 22-Aug-2013]

  Set :config_files to an empty array by default

[jeckyl-0.3.2 25-Jul-2013]

  Updated merge to merge a hash as well as a file (using Hash#merge!)

[jeckyl-0.3.1 9-Apr-2013]

  Added class method get_config_opt to pre-parse -c cfile from the command line so that
  the specified config file can then be used for the rest of the options

[jeckyl-0.3.0 29-Mar-2013]

  Beta test. Jeckyl can now process command switches for the same options using optparse.
  Helper methods moved to a separate module and a couple of new ones added (a_number, a_positive_number).
  A to_s method added to make it easier to display values.

[jeckyl-0.2.7 15-Nov-2012]

  Change base directory for configs to /etc/jerbil consistent with the main jerbil gem

[jeckyl-0.2.6 25-Oct-2012]

  Revert to /etc/jermine while working through changes to other gems

[jeckyl-0.2.5 25-Oct-2012]

  Clean up unwanted git files and update README links (e.g. rubydoc)

[jeckyl-0.2.4 25-Oct-2012]

  Deprecate ConfigRoot constant in favour of Jeckyl.config_dir, which will pick up
  the environment variable JECKYL_CONFIG_DIR if set or use '/etc/jeckyl'. This is a
  change from the old, quirky default of '/etc/jermine'. Tweak to 'jeckyl markdown'.

[jeckyl-0.2.3 21-Sep-2012]

  Add references to online docs etc to usage.

[jeckyl-0.2.2 21-Sep-2012]

  Add readme command to jeckyl to display README.md (when included properly)

[jeckyl-0.2.1 20-Sep-2012]

  Tidy up documentation.

[jeckyl-0.2.0 19-Sep-2012]
