@@ -1,14 +1,13 @@
 # Created by Jevoom
 #
-# 24-Jun-2014
-#   Added compound names to klass action for 'jeckyl' command, used to generate class
-#   files
+# 27-Jun-2014
+#   Fix #to_s to return a string and not output!
 
 module Jeckyl
-  # version set to 0.3.8
-  Version = '0.3.8'
-  # date set to 24-Jun-2014
-  Version_Date = '24-Jun-2014'
-  #ident string set to: jeckyl-0.3.8 24-Jun-2014
-  Ident = 'jeckyl-0.3.8 24-Jun-2014'
+  # version set to 0.3.9
+  Version = '0.3.9'
+  # date set to 27-Jun-2014
+  Version_Date = '27-Jun-2014'
+  #ident string set to: jeckyl-0.3.9 27-Jun-2014
+  Ident = 'jeckyl-0.3.9 27-Jun-2014'
 end
